force-app/main/default/objects/Partner_Renewal__c/Partner_Renewal__c.object-meta.xml
<CustomObject>
    <label>Partner Renewal</label>
    <pluralLabel>Partner Renewals</pluralLabel>
    <nameField>
        <displayFormat>REN-{00000000}</displayFormat>
        <label>Renewal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>