force-app/main/default/objects/Partner_Renewal__c/fields/Commercial_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Entitlement__c</fullName>
    <label>Commercial Entitlement</label>
    <type>Lookup</type>
    <referenceTo>Customer_Commercial_Entitlement__c</referenceTo>
    <relationshipName>Renewals</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>