force-app/main/default/objects/Partner_Renewal__c/fields/Confirmed_On__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_On__c</fullName>
    <label>Confirmed On</label>
    <type>DateTime</type>
</CustomField>