force-app/main/default/objects/Partner_Renewal__c/fields/Current_Deal__c.field-meta.xml
<CustomField>
    <fullName>Current_Deal__c</fullName>
    <label>Current Deal</label>
    <type>Lookup</type>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Renewals (Current Deal)</relationshipLabel>
    <relationshipName>Renewals_As_Current</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>