force-app/main/default/objects/Partner_Renewal__c/fields/Current_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Current_Opportunity__c</fullName>
    <label>Current Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Renewals</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>