force-app/main/default/objects/Partner_Renewal__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <label>Customer Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Partner_Renewals</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>