force-app/main/default/objects/Partner_Renewal__c/fields/Material_Change__c.field-meta.xml
<CustomField>
    <fullName>Material_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material Change</label>
    <type>Checkbox</type>
</CustomField>