force-app/main/default/objects/Partner_Renewal__c/fields/Material_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Material_Change_Reason__c</fullName>
    <label>Material Change Reason</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>