force-app/main/default/objects/Partner_Renewal__c/fields/Original_Deal__c.field-meta.xml
<CustomField>
    <fullName>Original_Deal__c</fullName>
    <label>Original Deal</label>
    <type>Lookup</type>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipName>Renewals_As_Original</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>