force-app/main/default/objects/Partner_Renewal__c/fields/Original_Protection__c.field-meta.xml
<CustomField>
    <fullName>Original_Protection__c</fullName>
    <label>Original Protection</label>
    <type>Lookup</type>
    <referenceTo>Deal_Protection_Grant__c</referenceTo>
    <relationshipName>Renewals</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>