force-app/main/default/objects/Partner_Renewal__c/fields/Planning_Window_Start_On__c.field-meta.xml
<CustomField>
    <fullName>Planning_Window_Start_On__c</fullName>
    <label>Planning Window Start On</label>
    <type>Date</type>
</CustomField>