force-app/main/default/objects/Partner_Renewal__c/fields/Renewal_Health__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Health__c</fullName>
    <label>Renewal Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
                <default>true</default>
                <label>On Track</label>
            </value>
            <value>
                <fullName>Watch</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>