force-app/main/default/objects/Partner_Renewal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description
  >Trimmed to the values this sprint's commands actually produce - Planning/Opportunity Created/Negotiation/Commit/Partially Renewed/Superseded are sales-execution-stage nuance the linked Opportunity's own StageName already covers per Sprint 39, not duplicated here.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identified</fullName>
                <default>true</default>
                <label>Identified</label>
            </value>
            <value>
                <fullName>Partner Confirmation Required</fullName>
            </value>
            <value>
                <fullName>Partner Confirmed</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>Not Renewed</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>