force-app/main/default/objects/Partner_Renewal__c/fields/Target_Decision_On__c.field-meta.xml
<CustomField>
    <fullName>Target_Decision_On__c</fullName>
    <label>Target Decision On</label>
    <type>Date</type>
</CustomField>